# SA.Resilience.Evaluator

./: README.md  package-lock.json  package.json  vue.config.js
back_end/: .gitignore  AHP.py  Advice.py  BuildCG.py  Caculate_metric_from_info.py  CalculateWordXG.py  Class_Diagram.py  CodeAnalysis.py  CodeInfoExtract.py  Component_recovery.py  DesignMetric.py  DocExtract.py  Extract2_14.py  ExtractModule.py  Extract_16.py  Extract_info_from_list.py  FaultRateCal.py  GetBadTaste.py  GetClassInfo.py  GetFileInfo.py  GetFuncInfo.py  GetProjectInfo.py  InfoExtract.py  InterfaceDesignFunc.py  PincodeExtract_from_list.py  ReqFunc.py  UserMannelFunc.py  Ztao_E4.py  Ztao_E42.py  app.py  attack_surface_info.py  attack_surface_source.py  attack_surface_uml.py  attack_surface_uml_UML.wsd  badsmell.py  calculateWord.py  call_back.py  call_back_comp_cpp.py  cdg.py  cfg_information_extraction.py  (+36 more)
back_end/CPP_Parsing/: CMakeLists.txt  CPP_Parsing.cpp
back_end/DDAnalysis/: CMakeLists.txt  DDAnalysis.cpp  DDAnalysis.h
back_end/pincode/: 工作项.xlsx  测试用例.xlsx
back_end/static/: Class.html  FLCG.dot.html  FLCG.js  PLCG.dot.html  PLCG.js  activity_uml.html  attack.html  attack.js  attack_back.js  c.rcf  call_backj.html  callback.html  callback.js  cfg_graph.html  class.js  clustered_sdg.js  comp (2).html  comp.html  comp.js  comp_uml.html  cpp.rcf  echarts.min.js  layer.js  layer_graph.js  level.html  pipe_filter.html  sdg.html
back_end/test1/: Inbuilt_Pair.cpp  PALIN.CPP  test_char_01.c  test_class.cpp  test_class02.cpp  test_cout.cpp  test_enum_01.c  test_extern_01.c  test_for.cpp  (+16 more)
(+92 files in other folders)
